; (subdir node_modules)

(melange.emit
 (target output)
 (alias output)
 (module_systems es6))

; (melange.emit
;  (target node)
;  (alias node)
;  (module_systems commonjs)
;  (libraries relude)
;  ; Warning 30 is an issue since I'm using recursive types
;  ;  that share some common field names
;  (compile_flags
;   (:standard -w -30)
;   (-open Relude.Globals)))

(dirs :standard __tests__)

(subdir
 node_modules
 (data_only_dirs bisect_ppx))

(subdir
 node_modules/@glennsl/bs-jest/src
 (library
  (name jest)
  (modes melange)))
